# monarch-documentation

./: .cruft.json  .gitignore  404.html  =1.6.7  CONTRIBUTING.md  Makefile  README.md  about.yaml  contact.md  generate_docs.py  index.html  mkdocs.yaml  mkdocs.yml  monarch_documentation_schema.yaml  project.Makefile  pyproject.toml  resources.yaml  sitemap.xml
.github/workflows/: deploy-docs.yaml  generate-resources-file.yaml  main.yaml
Documentation-Schema/: index.html
Documentation-Schema/Boolean/: index.html
Documentation-Schema/Contact/: index.html
Documentation-Schema/Curie/: index.html
Documentation-Schema/DataAsset/: index.html
Documentation-Schema/DataAssetEnum/: index.html
Documentation-Schema/Date/: index.html
Documentation-Schema/DateOrDatetime/: index.html
Documentation-Schema/Datetime/: index.html
Documentation-Schema/Decimal/: index.html
Documentation-Schema/Documentation/: index.html
Documentation-Schema/DocumentationAssetEnum/: index.html
Documentation-Schema/Double/: index.html
Documentation-Schema/Download/: index.html
Documentation-Schema/FileFormatEnum/: index.html
Documentation-Schema/Float/: index.html
Documentation-Schema/GrantEnum/: index.html
Documentation-Schema/Integer/: index.html
Documentation-Schema/Jsonpath/: index.html
Documentation-Schema/Jsonpointer/: index.html
Documentation-Schema/LicenseEnum/: index.html
Documentation-Schema/MonarchContributionEnum/: index.html
Documentation-Schema/MonarchRoleEnum/: index.html
Documentation-Schema/Ncname/: index.html
Documentation-Schema/Nodeidentifier/: index.html
Documentation-Schema/Objectidentifier/: index.html
Documentation-Schema/ProjectBoard/: index.html
Documentation-Schema/ReleaseStatusEnum/: index.html
Documentation-Schema/Repository/: index.html
Documentation-Schema/Resource/: index.html
Ingest Principles/: index.html
Repositories/Exomiser/: index.html
Resource/: index.html
ResourceCollection/: index.html
about/: index.html
description/: index.html
doc-env/: pyvenv.cfg
docs/: index.md
entries/: index.html
examples/: README.md
id/: index.html
monarch-documentation-schema/: index.html
monarch-sop/: index.html
name/: index.html
project/: monarch_technical_documentation.py
registry/: index.html  monarch-registry.yml  monarch_registry.md.jinja2
release-process/: index.html
resources/: monarch-app-infopages.json  monarch-app-infopages.tsv  monarch-app-resources.json  registry-data.tsv  registry-standards.tsv  registry-tools.tsv
scripts/: generate_index.py  generate_ingest_page.py  generate_repo_pages.py  log.py  utils.py
search/: search_index.json
seminars/: index.html
src/: generate_docs.py
tests/: __init__.py  test_data.py
types/: index.html
utils/: get-value.sh
(+161 files in other folders)
