[tool.poetry]
name = "Monarch-Documentation"
version = "0.1.1"
description = ""
authors = [
    "Monarch Initiative <info@monarchinitiative.org>",
    "Glass Elsarboukh <glass@tislab.org>",
    "Tim Putman <tim@tislab.org>",
    "Kevin Schaper <kevin@tislab.org>",
    "Corey Cox <corey@tislab.org>"
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
PyYAML = "^6.0"
PyGithub = "^1.59"
linkml = "^1.6.7"
linkml-runtime = "^1.6.0"
click = "^8.1.7"
cruft = "^2.15.0"
mkdocs-material = "^8.5.11"
mkdocs-mermaid2-plugin = "^0.6.0"
j2cli = "^0.3.10"
loguru = "*"

[tool.poetry.extras]
j2cli = ["yaml"]

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.4"
ruff = "*"


[tool.ruff]
line-length = 120
ignore = [
    "F541", # f-strings with no placeholders
    "E501", # line too long
]
# exclude = []


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
