[project]
name = "Monarch-Documentation"
version = "0.1.2"
description = ""
requires-python = ">=3.12,<4"
authors = [
    { name = "Monarch Initiative", email = "info@monarchinitiative.org" },
    { name = "Glass Elsarboukh", email = "glass@tislab.org" },
    { name = "Tim Putman", email = "tim@tislab.org" },
    { name = "Kevin Schaper", email = "kevin@tislab.org" },
    { name = "Corey Cox", email = "corey@tislab.org" },
]

dependencies = [
    "requests>=2.32.4",
    "PyYAML>=6.0.2",
    "PyGithub>=2.6.1",
    "linkml>=1.9.2",
    "linkml-runtime>=1.9.4",
    "click>=8.2.1",
    "cruft>=2.16.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "jinja2-cli[yaml] >=0.8.2",
    "loguru",
]


[project.optional-dependencies]
dev = ["pytest>=8.4.1", "ruff"]


[tool.ruff]
line-length = 120
ignore = [
    "F541", # f-strings with no placeholders
    "E501", # line too long
]
# exclude = []
